# macropus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  coverage.cmake  cpack.cmake  feature-deploy.yml  macropus.rc.in  newpsoft-unnofficial.cer  newpsoft-unnofficial.pfx  newpsoft-unnofficial.pvk  qml.qrc  qtquickcontrols2.conf  qtquickcontrols2.qrc  style  style.txt  todo.txt
.github/workflows/: build.yml
app/: main.cpp
icons/BlueSphere/: index.theme
include/: engine.h  fileutil.h  qclipboardproxy.h  qlibmacro.h  qtrigger.h  util.h
plugin/: macropus_plugin.cpp  macropus_plugin.h  qmldir
qml/: extension.js  files.js  functions.js  list_util.js  main.qml  model.js  settings.qml  unused.js  vars.js
qml/controls/: ActionBar.qml  ActionList.qml  ApplicationWindow.qml  CheckList.qml  Dialogs.qml  Draggable.qml  DropList.qml  DropListColumn.qml  DropListFlow.qml  EditMacros.qml  EditMacrosActionBar.qml  EditPage.qml  EditSignals.qml  EditTriggers.qml  ErrorDialog.qml  FileDialog.qml  FilterFileDialog.qml  FlagChecks.qml  HotkeyWindow.qml  InterceptSettings.qml  InterfaceView.qml  JsonSummary.qml  Layout.qml  ListActionBar.qml  MacroFile.qml  MacroList.qml  MacroSettings.qml  MainWindow.qml  MessageDialog.qml  ModeList.qml  ModeTabs.qml  ModifierChecks.qml  OtherSettings.qml  PhaseTrigger.qml  PwDialog.qml  RecordHotkeyDialog.qml  RecordOneWindow.qml  Recorder.qml  RunActionBar.qml  RunMacros.qml  (+9 more)
qml/controls/settings/: CustomInterceptList.qml  InterceptSettings.qml  MacroSettings.qml  OtherSettings.qml  StyleSettings.qml
qml/controls/settings/+linux/: CustomInterceptList.qml
qml/controls/settings/+windows/: CustomInterceptList.qml
qml/controls/signal/: Command.qml  HidEcho.qml  Interrupt.qml  Key.qml  Modifier.qml  MoveCursor.qml  NoOp.qml  Scroll.qml  StringKey.qml
qml/controls/trigger/: Action.qml  Alarm.qml  StageList.qml  Staged.qml
qml/settings/: Files.qml  Geometry.qml  LibmacroSettings.qml  PlatformStyle.qml  SignalPages.qml  SignalSerial.qml  Style.qml  TriggerPages.qml  TriggerSerial.qml  Vars.qml  WindowSettings.qml  qmldir
qml/views/: ApplicationWindowForm.qml  ButtonStyle.qml  ComboBoxStyle.qml  DragForm.qml  DragIndicator.qml  DropForm.qml  DropList.qml  DropListForm.qml  DropListItem.qml  DropListItemForm.qml  ExpandableHeader.qml  ExpandableTutorialForm.qml  FrameContent.qml  HotkeyForm.qml  InterfaceForm.qml  ListActionButtons.qml  ListActionColumn.qml  ListActionRow.qml  MacroForm.qml  ModeCheckList.qml  OneShot.qml  OpacityConstraint.qml  PrintDimension.qml  RunMacroForm.qml  TabIndicator.qml  TitlePage.qml  WidthConstraint.qml  WidthConstraintItem.qml  WidthListener.qml  WindowForm.qml
src/: engine.cpp  fileutil.cpp  qclipboardproxy.cpp  qlibmacro.cpp  qtrigger.cpp  util.cpp
src/linux/: p_qlibmacro.cpp
src/none/: p_qlibmacro.cpp
src/windows/: p_qlibmacro.cpp
test/: functions.js  main.cpp  play.cpp  play.qml  tst_Macropus.cpp  tst_Macropus.h
test/assets/: optimized.mcr  serialized.mcr
test/controls/: ActionList.qml  tst_MacroFile.qml
test/controls/signal/: SignalPage.qml  tst_Command.qml  tst_HidEcho.qml  tst_Interrupt.qml  tst_Key.qml  tst_Modifier.qml  tst_MoveCursor.qml  tst_NoOp.qml  tst_Scroll.qml  tst_StringKey.qml
test/controls/trigger/: TriggerPage.qml  tst_Action.qml  tst_Alarm.qml  tst_StageList.qml  tst_Staged.qml
test/views/: CheckList.qml  DropListView.qml  PageView.qml
